--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_sign_in_web: ^0.12.4+1
   grpc: ^3.2.4
   protobuf: ^3.1.0
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
