--- a/grpc/pubspec.yaml
+++ b/grpc/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   mongo_dart: ^0.9.4
   injectable: ^2.4.2
   dart_jsonwebtoken: ^2.14.0
-  googleapis: ^13.2.0
   jose: ^0.3.4
+  bcrypt: ^1.1.3
 
 dev_dependencies:
   injectable_generator: ^2.6.1
